# hypackconverter

./: .gitignore  AGENTS.md  gen_legacy_pack.py  gen_models.py  gen_modern_pack.py  hypackconverter.py  pyproject.toml  utils.py
tests/: test_gen_legacy_pack.py  test_gen_models.py  test_hypackconverter.py
